# reqeng-mcp

./: .copier-answers.yml  .env.example  .gitattributes  .pre-commit-config.yaml  .vale.ini  CLAUDE.md  Dockerfile  LICENSE  README.md  codecov.yml  compose.yml  docker-entrypoint.sh  mkdocs.yml  pyproject.toml  server.json
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  coverage-status.yml  release.yml
.vale/styles/config/vocabularies/Base/: accept.txt
docs/: configuration.md  design.md  index.md  installation.md  prompts.md
docs/deployment/: docker.md  oidc.md
docs/guides/: authentication.md  file-exchange.md
docs/plans/: 2026-05-02-phase-1-read-substrate.md
docs/specs/: 2026-05-02-reqeng-mcp-design.md
docs/tools/: index.md
examples/: bearer-auth.env  oidc.env
packaging/: env.example  nfpm.yaml  reqeng-mcp.service  test-install.sh
packaging/mcpb/: .gitignore  build.sh  manifest.json.in  pyproject.toml.in
packaging/mcpb/src/: server.py
packaging/scripts/: postinstall.sh  postremove.sh  preinstall.sh  preremove.sh
scripts/copier_update_prompts/: job_a.md  job_b.md  job_c.md
src/reqeng_mcp/: __init__.py  _server_apps.py  _server_deps.py  cli.py  config.py  domain.py  prompts.py  resources.py  server.py  tools.py
src/reqeng_mcp/static/: app.html
tests/: conftest.py  test_cli.py  test_smoke.py
